# a_short_introduction_to_system_f_and_system_f_omega

simply_typed_lambda_calculus/: Cargo.toml
simply_typed_lambda_calculus/src/: ast.rs  grammar.lalrpop  typechecker.rs
system_f/: Cargo.toml
system_f/src/: ast.rs  grammar.lalrpop  grammar.rs  main.rs  typechecker.rs
